--- a/pages/pages.css
+++ b/pages/pages.css
@@ -94,7 +94,7 @@ header{
     justify-content: center;
     margin-bottom: 40px;
 
-    & button{
+    & #button{
         color: var(--white);
         background-color: var(--blue);
         padding: 15px;
@@ -225,6 +225,19 @@ footer{
 
             & p{
                 color: var(--white);
+            }
+
+            & #btn-footer{
+                font-size: 2.5rem;
+                background-color: #000;
+                color: var(--white);
+                border: none;
+
+                &:hover{
+                    color: var(--blue);
+                    transition: 0.3s;
+                    cursor:pointer;
+                }
             }
         }
     }
