--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer{
                 color: var(--white);
             }
 
-            & button{
+            & #btn-footer{
                 font-size: 2.5rem;
                 background-color: #000;
                 color: var(--white);
