--- a/style.css
+++ b/style.css
@@ -481,11 +481,6 @@ footer{
             display: flex;
             flex-direction: column;
 
-            #map{
-                width: 300px;
-                height: 300px;
-            }
-    
             & ul{
                 display: flex;
                 flex-direction: row;
@@ -501,7 +496,7 @@ footer{
     }
 }
 
-/* MINI CELULARES */
+/* MÁS CELULARES */
 @media (max-width: 630px){
     header{
         nav{
@@ -545,11 +540,64 @@ footer{
 
                 #imagenes-pequeñas{
                     & img{
-                        width: 80px;
+                        width: 120px;
                         height: 95px;
                     }
                 }
             }
         }
+    }
+}
+
+@media (max-width: 430px){
+    header{
+        nav{
+            & ul{
+                 & li{
+                    & a{
+                        font-size: 0.3rem;
+                    }
+                }
+            }
+        }
+    }
+
+    main{
+
+        #presentation{
+    
+            & span{
+                margin-top: 20px;
+                font-size: 0.8rem;
+            }
+
+            & h1{
+                font-size: 1.5rem;
+            }
+        }
+
+        #news{
+            #imagenes{
+                
+                #imagen-grande{
+                    width: 180px;
+                }
+
+                #imagenes-pequeñas{
+                    & img{
+                        width: 100px;
+                        height: 95px;
+                    }
+                }
+            }
+        }
+
+        #elegirnos{
+            #eleg-cont{
+                .contenedores{
+                    width: 150px;
+                }
+            }
+        } 
     }
 }
